--- a/css/default.css
+++ b/css/default.css
@@ -3259,11 +3259,12 @@ input[type="button"].btn-block {
   background: no-repeat 50% / 50% 50%;
 }
 
-.custom-checkbox .custom-control-label::before {
+/* 12 */
+/* .custom-checkbox .custom-control-label::before {
   border-radius: 0.25rem;
-}
+} */
 
-.custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
+/* .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 
@@ -3282,9 +3283,11 @@ input[type="button"].btn-block {
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
   background-color: rgba(0, 123, 255, 0.5);
-}
+} */
 
-.custom-radio .custom-control-label::before {
+/* 12 */
+
+/* .custom-radio .custom-control-label::before {
   border-radius: 50%;
 }
 
@@ -3294,9 +3297,11 @@ input[type="button"].btn-block {
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
   background-color: rgba(0, 123, 255, 0.5);
-}
+} */
 
-.custom-switch {
+/* 12 */
+
+/* .custom-switch {
   padding-left: 2.25rem;
 }
 
@@ -3330,9 +3335,10 @@ input[type="button"].btn-block {
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
   background-color: rgba(0, 123, 255, 0.5);
-}
+} */
 
-.custom-select {
+/* 12 */
+/* .custom-select {
   display: inline-block;
   width: 100%;
   height: calc(1.5em + 0.75rem + 2px);
@@ -3369,9 +3375,9 @@ input[type="button"].btn-block {
 .custom-select:disabled {
   color: #6c757d;
   background-color: #e9ecef;
-}
+} */
 
-.custom-select::-ms-expand {
+/* .custom-select::-ms-expand {
   display: none;
 }
 
@@ -3389,9 +3395,11 @@ input[type="button"].btn-block {
   padding-bottom: 0.5rem;
   padding-left: 1rem;
   font-size: 1.25rem;
-}
+} */
 
-.custom-file {
+/* 12 */
+
+/* .custom-file {
   position: relative;
   display: inline-block;
   width: 100%;
@@ -3456,9 +3464,12 @@ input[type="button"].btn-block {
   background-color: #e9ecef;
   border-left: inherit;
   border-radius: 0 0.25rem 0.25rem 0;
-}
+} */
 
-.custom-range {
+
+/* 12 */
+
+/* .custom-range {
   width: 100%;
   height: calc(1rem + 0.4rem);
   padding: 0;
@@ -3601,15 +3612,15 @@ input[type="button"].btn-block {
 
 .custom-range:disabled::-moz-range-thumb {
   background-color: #adb5bd;
-}
-
+} */
+/*
 .custom-range:disabled::-moz-range-track {
   cursor: default;
 }
 
 .custom-range:disabled::-ms-thumb {
   background-color: #adb5bd;
-}
+} */
 
 .custom-control-label::before,
 .custom-file-label,
@@ -4287,70 +4298,6 @@ header {
   }
 }
 
-/* 11 */
-/* .accordion > .card {
-  overflow: hidden;
-}
-
-.accordion > .card:not(:first-of-type) .card-header:first-child {
-  border-radius: 0;
-}
-
-.accordion > .card:not(:first-of-type):not(:last-of-type) {
-  border-bottom: 0;
-  border-radius: 0;
-}
-
-.accordion > .card:first-of-type {
-  border-bottom: 0;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.accordion > .card:last-of-type {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.accordion > .card .card-header {
-  margin-bottom: -1px;
-} */
-
-/* 11 */
-
-/* .breadcrumb {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0.75rem 1rem;
-  margin-bottom: 1rem;
-  list-style: none;
-  background-color: #e9ecef;
-  border-radius: 0.25rem;
-}
-
-.breadcrumb-item + .breadcrumb-item {
-  padding-left: 0.5rem;
-}
-
-.breadcrumb-item + .breadcrumb-item::before {
-  display: inline-block;
-  padding-right: 0.5rem;
-  color: #6c757d;
-  content: "/";
-}
-
-.breadcrumb-item + .breadcrumb-item:hover::before {
-  text-decoration: underline;
-}
-
-.breadcrumb-item + .breadcrumb-item:hover::before {
-  text-decoration: none;
-}
-
-.breadcrumb-item.active {
-  color: #6c757d;
-} */
-
 .pagination {
   display: flex;
   padding-left: 0;
@@ -4599,27 +4546,9 @@ a.badge-dark:focus, a.badge-dark.focus {
   box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
 }
 
-/* 11 */
-/* .jumbotron {
-  padding: 2rem 1rem;
-  margin-bottom: 2rem;
-  background-color: #e9ecef;
-  border-radius: 0.3rem;
-}
+/* 12 */
 
-@media (min-width: 576px) {
-  .jumbotron {
-    padding: 4rem 2rem;
-  }
-}
-
-.jumbotron-fluid {
-  padding-right: 0;
-  padding-left: 0;
-  border-radius: 0;
-} */
-
-.alert {
+/* .alert {
   position: relative;
   padding: 0.75rem 1.25rem;
   margin-bottom: 1rem;
@@ -4757,7 +4686,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 
 .alert-dark .alert-link {
   color: #040505;
-}
+} */
 
 @keyframes progress-bar-stripes {
   from {
@@ -4767,49 +4696,6 @@ a.badge-dark:focus, a.badge-dark.focus {
     background-position: 0 0;
   }
 }
-
-/* 11 */
-
-/* .progress {
-  display: flex;
-  height: 1rem;
-  overflow: hidden;
-  font-size: 0.75rem;
-  background-color: #e9ecef;
-  border-radius: 0.25rem;
-}
-
-.progress-bar {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: #fff;
-  text-align: center;
-  white-space: nowrap;
-  background-color: #007bff;
-  transition: width 0.6s ease;
-}
-
-@media (prefers-reduced-motion: reduce) {
-  .progress-bar {
-    transition: none;
-  }
-}
-
-.progress-bar-striped {
-  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-  background-size: 1rem 1rem;
-}
-
-.progress-bar-animated {
-  animation: progress-bar-stripes 1s linear infinite;
-}
-
-@media (prefers-reduced-motion: reduce) {
-  .progress-bar-animated {
-    animation: none;
-  }
-} */
 
 .media {
   display: flex;
@@ -4850,57 +4736,6 @@ button.close {
 a.close.disabled {
   pointer-events: none;
 }
-
-/* 11 */
-/*
-
-@keyframes spinner-border {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.spinner-border {
-  display: inline-block;
-  width: 2rem;
-  height: 2rem;
-  vertical-align: text-bottom;
-  border: 0.25em solid currentColor;
-  border-right-color: transparent;
-  border-radius: 50%;
-  animation: spinner-border .75s linear infinite;
-}
-
-.spinner-border-sm {
-  width: 1rem;
-  height: 1rem;
-  border-width: 0.2em;
-}
-
-@keyframes spinner-grow {
-  0% {
-    transform: scale(0);
-  }
-  50% {
-    opacity: 1;
-  }
-}
-
-.spinner-grow {
-  display: inline-block;
-  width: 2rem;
-  height: 2rem;
-  vertical-align: text-bottom;
-  background-color: currentColor;
-  border-radius: 50%;
-  opacity: 0;
-  animation: spinner-grow .75s linear infinite;
-}
-
-.spinner-grow-sm {
-  width: 1rem;
-  height: 1rem;
-} */
 
 .align-baseline {
   vertical-align: baseline !important;
